still trying to bug fix chrome on iOS showing white page on bottom of website

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 html {
   min-height: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
